sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:11: error: value || is not a member of Int
      if (gap=9 ||gap=10){
                ^AlgCombSort11:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if (gap=9 ||gap=10){
             ^