sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var gap = getValueCount()
  var len=getValueCount()
  var i=0
  var swapped = false
  do {
    swapped =false
    if (gap>1){  
      gap = (gap.toDouble/1.3).toInt
      if (gap=9 ||gap=10){
        gap=11
      }
    }
    i=0
    while (i+gap<len){
      if (isSmaller(i+gap,i)){
        swap(i,i+gap)
        swapped = true
      }
      i=i+1
    }
  } while(gap>1 || swapped == true)
}
